--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,8 @@ pbr>=0.6,!=0.7,<1.0
 
 argparse
 Babel>=1.3
+python-heatclient>=0.3.0
+python-tuskarclient
 oslo.config>=1.9.3,<1.10.0  # Apache-2.0
 oslo.i18n>=1.5.0,<1.6.0  # Apache-2.0
 pyOpenSSL>=0.11
